--- a/src/main/resources/templates/createProductUser.html
+++ b/src/main/resources/templates/createProductUser.html
@@ -4,12 +4,9 @@
       layout:decorate="~{layout/adminlayout/template_admin.html}">
 <head>
     <title>
-       Dashboard
+      Create product
     </title>
-
-
 </head>
-
 <body  layout:fragment="content">
 <div class="content">
     <div class="container-fluid">
@@ -19,7 +16,7 @@
             <div class="col-md-9">
                 <div class="card">
                     <div class="card-header card-header-primary">
-                        <h4 class="card-title">Add product user </h4>
+                        <h4 class="card-title">Add product </h4>
                     </div>
                     <div class="card-body">
                         <form method="post" action="/createproduct" th:object="${productDto}" enctype="multipart/form-data">
@@ -59,14 +56,6 @@
                                             <label class="custom-file-label" for="filename">Choose file</label>
                                         </div>
                                    </div>
-
-<!--                                    <div class="form-group">-->
-<!--                                        <div class="custom-file">-->
-<!--                                            <input type="file"  class="custom-file-input" id="filename2" name="files"-->
-<!--                                                   accept="image/jpeg,image/png,image/jpg" >-->
-<!--                                            <label class="custom-file-label" for="filename2">Choose file</label>-->
-<!--                                        </div>-->
-<!--                                    </div>-->
 
                                 <div class="col-md-12">
                                     <div class="form-group">
