--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
                 <nav class="side-nav">
                     <div class="sidenav-title" >Browse Categories</div><!-- End .sidenav-title -->
                     <ul class="menu-vertical sf-arrows" th:each=" category : ${categorys}" >
-                        <li><a  th:href="@{/list_product_category(name=${category.name})}" class="custom-control-label" for="cat-1" th:text="${category.name}"></a></li>
+                        <li><a  th:href="@{/list_product_category(name=${category.name})}" th:text="${category.name}"></a></li>
                     </ul><!-- End .menu -->
                 </nav><!-- End .side-nav -->
             </div><!-- End .col-lg-3 -->
@@ -152,11 +152,11 @@
                 <li class="nav-item">
                     <a class="nav-link active" id="products-trending-link" data-toggle="tab"
                        href="#products-trending-tab" role="tab" aria-controls="products-trending-tab"
-                       aria-selected="true">Now Trending</a>
+                       aria-selected="true">New release</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="products-new-link" data-toggle="tab" href="#products-new-tab" role="tab"
-                       aria-controls="products-new-tab" aria-selected="false">New Releases</a>
+                       aria-controls="products-new-tab" aria-selected="false">Suggest</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" id="products-best-link" data-toggle="tab" href="#products-best-tab" role="tab"
@@ -191,175 +191,21 @@
                                             }
                                         }
                                     }'>
-                            <div class="product">
+                            <div class="product" th:each="date :${dates}">
                                 <figure class="product-media">
-                                    <span class="product-label label-sale">Sale</span>
-                                    <a href="/productDetail">
-                                        <img src="images/index/products/product-1.jpg" alt="Product image"
+                                    <a th:href="@{/productdetail(id=${date.productid})}">
+                                        <img th:src="@{${'/images/upload/' + date.images[0].name}}" alt="Product image"
                                              class="product-image">
                                     </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
                                 </figure><!-- End .product-media -->
 
                                 <div class="product-body">
                                     <div class="product-cat">
                                         <a href="#">Shooter</a>
                                     </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">Call of Duty <br>WWII - Gold
+                                    <h3 class="product-title"><a th:href="@{/productdetail(id=${date.productid})}" th:text="${date.name}">Call of Duty <br>WWII - Gold
                                         Edition</a></h3><!-- End .product-title -->
-                                    <div class="product-price">
-                                        <span class="new-price">$24.00</span>
-                                        <span class="old-price">Was $59.99</span>
-                                    </div><!-- End .product-price -->
-                                </div><!-- End .product-body -->
-                            </div><!-- End .product -->
-
-                            <div class="product">
-                                <figure class="product-media">
-                                    <a href="product.html">
-                                        <img src="images/index/products/product-2.jpg" alt="Product image"
-                                             class="product-image">
-                                    </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
-                                </figure><!-- End .product-media -->
-
-                                <div class="product-body">
-                                    <div class="product-cat">
-                                        <a href="#">Shooter</a>
-                                    </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">World War Z</a></h3>
-                                    <!-- End .product-title -->
-                                    <div class="product-price">
-                                        $39.99
-                                    </div><!-- End .product-price -->
-                                </div><!-- End .product-body -->
-                            </div><!-- End .product -->
-
-                            <div class="product">
-                                <figure class="product-media">
-                                    <span class="product-label label-top">Top</span>
-                                    <a href="product.html">
-                                        <img src="images/index/products/product-3.jpg" alt="Product image"
-                                             class="product-image">
-                                    </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
-                                </figure><!-- End .product-media -->
-
-                                <div class="product-body">
-                                    <div class="product-cat">
-                                        <a href="#">Shooter</a>
-                                    </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">Borderlands: <br>The Handsome
-                                        Collection</a></h3><!-- End .product-title -->
-                                    <div class="product-price">
-                                        $59.99
-                                    </div><!-- End .product-price -->
-                                </div><!-- End .product-body -->
-                            </div><!-- End .product -->
-
-                            <div class="product">
-                                <figure class="product-media">
-                                    <a href="product.html">
-                                        <img src="images/index/products/product-4.jpg" alt="Product image"
-                                             class="product-image">
-                                    </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
-                                </figure><!-- End .product-media -->
-
-                                <div class="product-body">
-                                    <div class="product-cat">
-                                        <a href="#">Action & adventure</a>
-                                    </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">The Witcher 3: Wild Hunt</a></h3>
-                                    <!-- End .product-title -->
-                                    <div class="product-price">
-                                        $39.99
-                                    </div><!-- End .product-price -->
-                                </div><!-- End .product-body -->
-                            </div><!-- End .product -->
-
-                            <div class="product">
-                                <figure class="product-media">
-                                    <span class="product-label label-sale">Sale</span>
-                                    <a href="product.html">
-                                        <img src="images/index/products/product-5.jpg" alt="Product image"
-                                             class="product-image">
-                                    </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
-                                </figure><!-- End .product-media -->
-
-                                <div class="product-body">
-                                    <div class="product-cat">
-                                        <a href="#">Action & adventure</a>
-                                    </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">GTA Online: Criminal Enterprise Starter
-                                        Pack</a></h3><!-- End .product-title -->
-                                    <div class="product-price">
-                                        <span class="new-price">$19.49</span>
-                                        <span class="old-price">Was $24.49</span>
-                                    </div><!-- End .product-price -->
-                                </div><!-- End .product-body -->
-                            </div><!-- End .product -->
-
-                            <div class="product">
-                                <figure class="product-media">
-                                    <a href="product.html">
-                                        <img src="images/index/products/product-6.jpg" alt="Product image"
-                                             class="product-image">
-                                    </a>
-
-                                    <div class="product-action-vertical">
-                                        <a href="#" class="btn-product-icon btn-wishlist" title="Add to Wishlist"><span>add to wishlist</span></a>
-                                    </div><!-- End .product-action-vertical -->
-
-                                    <div class="product-action">
-                                        <a href="#" class="btn-product btn-cart"><span>add to cart</span></a>
-                                    </div><!-- End .product-action -->
-                                </figure><!-- End .product-media -->
-
-                                <div class="product-body">
-                                    <div class="product-cat">
-                                        <a href="#">Shooter</a>
-                                    </div><!-- End .product-cat -->
-                                    <h3 class="product-title"><a href="product.html">Tom Clancy’s <br>Ghost Recon Wildlands</a>
-                                    </h3><!-- End .product-title -->
-                                    <div class="product-price">
-                                        $49.99
+                                    <div class="product-price" th:text="'$' + ${date.price}">
                                     </div><!-- End .product-price -->
                                 </div><!-- End .product-body -->
                             </div><!-- End .product -->
@@ -791,7 +637,7 @@
     <div class="container">
         <div class="heading heading-flex mb-2 mb-lg-3">
             <div class="heading-left">
-                <h2 class="title mb-0">Special Offers</h2><!-- End .title -->
+                <h2 class="title mb-0">Hot Sales</h2><!-- End .title -->
             </div><!-- End .heading-left -->
 
             <div class="heading-right">
