--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -99,7 +99,7 @@
                                         <div class="product product-7 text-center">
                                             <figure class="product-media">
                                                 <a th:href="@{/productdetail(id=${product.productid})}">
-                                                    <img th:src="@{${'/images/' + product.images[0].name}}"
+                                                    <img th:src="@{${'/images/upload/' + product.images[0].name}}"
                                                          alt="Product image" class="product-image">
                                                 </a>
                                             </figure><!-- End .product-media -->
