--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -47,7 +47,7 @@
                                             <div class="product">
                                                 <figure class="product-media">
                                                     <a href="#">
-                                                        <img th:src="@{${'/images/' + item.product.image}}"
+                                                        <img th:src="@{${'/images/upload/' + item.product.images[0].name}}"
                                                              alt="Product image">
                                                     </a>
                                                 </figure>
